added two beams model

--- a/references.bib
+++ b/references.bib
@@ -865,11 +865,171 @@ year = {1994}
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%% Collective Oscillations %%%%%%%%
+
+@article{Flowers1976a,
+author = {Flowers, Elliott G and Sutherland, Peter G},
+doi = {10.1086/182223},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Flowers, Sutherland/1976 - The Astrophysical Journal.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+mendeley-groups = {Neutrino/collective},
+month = {aug},
+number = {1},
+pages = {L19},
+title = {{Neutrino-neutrino scattering and supernovae}},
+url = {http://adsabs.harvard.edu/doi/10.1086/182223},
+volume = {208},
+year = {1976}
+}
+
+
+@article{Sigl1993,
+annote = {They difined entropy in this paper but the form is hard to understand!},
+author = {Sigl, G. and Raffelt, G.},
+doi = {10.1016/0550-3213(93)90175-O},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Sigl, Raffelt/1993 - Nuclear Physics B.pdf:pdf},
+issn = {05503213},
+journal = {Nuclear Physics B},
+keywords = {Matter Suppression,Wigner Function},
+mendeley-groups = {Neutrino,Neutrino/TheArticles,Neutrino/theory,Neutrino/collective},
+mendeley-tags = {Matter Suppression,Wigner Function},
+month = {sep},
+number = {1-2},
+pages = {423--451},
+title = {{General kinetic description of relativistic mixed neutrinos}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/055032139390175O},
+volume = {406},
+year = {1993}
+}
+
+
+@article{Duan2006,
+abstract = {We present results of large-scale numerical simulations of the evolution of neutrino and antineutrino flavors in the region above the late-time post-supernova-explosion proto-neutron star. Our calculations are the first to allow explicit flavor evolution histories on different neutrino trajectories and to self-consistently couple flavor development on these trajectories through forward scattering-induced quantum entanglement. Employing the atmospheric-scale neutrino mass-squared difference and values of theta{\_}13 allowed by current bounds, we find transformation of neutrino and antineutrino flavors over broad ranges of energy and luminosity in roughly the ``bi-polar'' collective mode. We find that this large-scale flavor conversion, largely driven by the flavor off-diagonal neutrino-neutrino forward scattering potential, sets in much closer to the proto-neutron star than simple estimates based on flavor-diagonal potentials and Mikeheyev-Smirnov-Wolfenstein evolution would indicate. In turn, this suggests that models of r-process nucleosynthesis sited in the neutrino-driven wind could be affected substantially by active-active neutrino flavor mixing, even with the small measured neutrino mass-squared differences.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0606616},
+author = {Duan, Huaiyu and Fuller, George M. and Carlson, J. and Qian, Yong Zhong},
+doi = {10.1103/PhysRevD.74.105014},
+eprint = {0606616},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan et al/2006 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
+issn = {15507998},
+journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+mendeley-groups = {Neutrino,Neutrino/collective},
+pages = {1--22},
+primaryClass = {astro-ph},
+title = {{Simulation of coherent nonlinear neutrino flavor transformation in the supernova environment: Correlated neutrino trajectories}},
+volume = {74},
+year = {2006}
+}
+
+
+@article{Malkus2014,
+abstract = {Accretion disks arising from neutron star- neutron star mergers or black hole- neutron star mergers produce large numbers of neutrinos and antineutrinos. In contrast to other astrophysical scenarios, like supernovae, in mergers the antineutrinos outnumber the neutrinos. This antineutrino dominance gives neutrinos from merger disks the opportunity to exhibit new oscillation physics, specifically a matter-neutrino resonance. We explore this resonance, finding that consequences can be a large transition of {\$}\backslashnu{\_}e{\$} to other flavors, while the {\$}\backslashbar{\{}\backslashnu{\}}{\_}e{\$}s return to their initial state. We present numerical calculations of neutrinos from merger disks and compare with a single energy model. We explain both the basic features and the conditions for a transition.},
+archivePrefix = {arXiv},
+arxivId = {1403.5797},
+author = {Malkus, a and Friedland, A and McLaughlin, G. C.},
+eprint = {1403.5797},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Malkus, Friedland, McLaughlin/2014 - Unknown.pdf:pdf},
+keywords = {a black hole,accretion disk,as home to,forms a black hole,many reasons,mergers are fascinating for,neutrino mixing,neutrinos-neutrino interaction,neutron star and,neutron stars or a,the merger of two,these},
+mendeley-groups = {Neutrino/matter,Neutrino/resonance},
+month = {mar},
+number = {1},
+pages = {1--6},
+title = {{Matter-Neutrino Resonance Above Merging Compact Objects}},
+url = {http://arxiv.org/abs/1403.5797},
+year = {2014}
+}
+
+@article{Vaananen2015,
+abstract = {Matter Neutrino Resonances (MNRs) can drastically modify neutrino flavor evolution in astrophysical environments and may significantly impact nucleosynthesis. Here we further investigate the underlying physics of MNR type flavor transitions. We provide generalized resonance conditions and make analytical predictions for the behavior of the system. We discuss the adiabatic evolution of these transitions, considering both Symmetric and Standard scenarios. Symmetric MNR transitions differ from Standard MNR transitions in that both neutrinos and antineutrinos can completely transform to other flavors simultaneously. We provide an example of the simplest system in which such transitions can occur with a neutrino and an antineutrino having a single energy and emission angle. We further apply linearized stability analysis to predict the location of self-induced nutation type (or bipolar) oscillations due to neutrino-neutrino interactions in the regions where MNR is ineffective. In all cases, we compare our analytical predictions to numerical calculations.},
+archivePrefix = {arXiv},
+arxivId = {1510.00751},
+author = {Vaananen, D. and McLaughlin, G. C.},
+eprint = {1510.00751},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Vaananen, McLaughlin/2015 - Unknown.pdf:pdf},
+keywords = {neutrino mixing,neutrinos-neutrino interaction},
+mendeley-groups = {Neutrino/matter},
+month = {oct},
+pages = {1--16},
+title = {{Uncovering the Matter-Neutrino Resonance}},
+url = {http://arxiv.org/abs/1510.00751},
+year = {2015}
+}
+
+
+@article{Wu2015,
+abstract = {In astrophysical environments such as core-collapse supernovae and neutron star-neutron star or neutron star-black hole mergers where dense neutrino media are present, matter-neutrino resonances (MNRs) can occur when the neutrino propagation potentials due to neutrino-electron and neutrino-neutrino forward scattering nearly cancel each other. We show that neutrino flavor transformation through MNRs can be explained by multiple adiabatic solutions similar to the Mikheyev-Smirnov-Wolfenstein mechanism. We find that for the normal neutrino mass hierarchy, neutrino flavor evolution through MNRs can be sensitive to the shape of neutrino spectra and the adiabaticity of the system, but such sensitivity is absent for the inverted hierarchy.},
+archivePrefix = {arXiv},
+arxivId = {1509.08975},
+author = {Wu, Meng-Ru and Duan, Huaiyu and Qian, Yong-Zhong},
+doi = {10.1016/j.physletb.2015.11.027},
+eprint = {1509.08975},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Wu, Duan, Qian/2016 - Physics Letters B.pdf:pdf},
+issn = {03702693},
+journal = {Physics Letters B},
+keywords = {black hole accretion disk,core-collapse supernova,dense neutrino medium,neutrino oscillations},
+mendeley-groups = {Neutrino/collective},
+month = {jan},
+pages = {89--94},
+title = {{Physics of neutrino flavor transformation through matter–neutrino resonances}},
+url = {http://arxiv.org/abs/1509.08975 http://linkinghub.elsevier.com/retrieve/pii/S0370269315008758},
+volume = {752},
+year = {2016}
+}
+
+
+
+@article{Mangano2014,
+abstract = {The most general case of self-induced neutrino flavor evolution is described by a set of kinetic equations for a dense neutrino gas evolving both in space and time. Solutions of these equations have been typically worked out assuming that either the time (in the core-collapse supernova environment) or space (in the early universe) homogeneity in the initial conditions is preserved through the evolution. In these cases one can gauge away the homogeneous variable and reduce the dimensionality of the problem. In this paper we investigate if small deviations from an initial postulated homogeneity can be amplified by the interacting neutrino gas, leading to a new flavor instability. To this end, we consider a simple two flavor isotropic neutrino gas evolving in time, and initially composed by only {\$}\backslashnu{\_}e{\$} and {\$}\backslashbar\backslashnu{\_}e{\$} with equal densities. In the homogeneous case, this system shows a bimodal instability in the inverted mass hierarchy scheme, leading to the well studied flavor pendulum behavior. This would lead to periodic pair conversions {\$}\backslashnu{\_}e \backslashbar\backslashnu{\_}e \backslashleftrightarrow \backslashnu{\_}x \backslashbar\backslashnu{\_}x{\$}. To break space homogeneity, we introduce small amplitude space-dependent perturbations in the matter potential. By Fourier transforming the equations of motion with respect to the space coordinate, we then numerically solve a set of coupled equations for the different Fourier modes. We find that even for arbitrarily tiny inhomogeneities, the system evolution runs away from the stable pendulum behavior: the different modes are excited and the space-averaged ensemble evolves towards flavor equilibrium. We finally comment on the role of a time decaying neutrino background density in weakening these results.},
+archivePrefix = {arXiv},
+arxivId = {1403.1892},
+author = {Mangano, Gianpiero and Mirizzi, Alessandro and Saviano, Ninetta},
+doi = {10.1103/PhysRevD.89.073017},
+eprint = {1403.1892},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Mangano, Mirizzi, Saviano/2014 - Physical Review D.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino,Neutrino/collective},
+month = {apr},
+number = {7},
+pages = {073017},
+title = {{Damping the neutrino flavor pendulum by breaking homogeneity}},
+url = {https://link.aps.org/doi/10.1103/PhysRevD.89.073017 http://arxiv.org/abs/1403.1892 http://dx.doi.org/10.1103/PhysRevD.89.073017},
+volume = {89},
+year = {2014}
+}
+
+
+%%%%%%%%% Collective Oscillations %%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%% Dispersion Relation %%%%%%%%%%
+
+
+
+@article{Bahcall1987,
+author = {Bahcall, J. N. and Dar, A. and Piran, T.},
+doi = {10.1038/326135a0},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bastian, Bookbinder/1987 - Nature.pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+mendeley-groups = {Neutrino/supernova},
+month = {mar},
+number = {6109},
+pages = {135--136},
+title = {{Neutrinos from the recent LMC supernova}},
+url = {http://www.nature.com/articles/326135a0},
+volume = {326},
+year = {1987}
+}
+
+
 
 @article{Duan2009,
 abstract = {We discuss the relationship between a symmetry in the neutrino flavour evolution equations and neutrino flavour oscillations in the collective precession mode. This collective precession mode can give rise to spectral swaps (splits) when conditions can be approximated as homogeneous and isotropic. Multi-angle numerical simulations of supernova neutrino flavour transformation show that when this approximation breaks down, non-collective neutrino oscillation modes decohere kinematically, but the collective precession mode still is expected to stand out. We provide a criterion for significant flavour transformation to occur if neutrinos participate in a collective precession mode. This criterion can be used to understand the suppression of collective neutrino oscillations in anisotropic environments in the presence of a high matter density. This criterion is also useful in understanding the breakdown of the collective precession mode when neutrino densities are small.},
