halo problem for line model with symmetries

--- a/references.bib
+++ b/references.bib
@@ -1210,6 +1210,54 @@ year = {2017}
 
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%% Halo Problem %%%%%%%%%%
+
+@article{Cherry2012,
+abstract = {We argue that the small fraction of neutrinos that undergo direction-changing scattering outside of the neutrinosphere could have significant influence on neutrino flavor transformation in core-collapse supernova environments.We show that the standard treatment for collective neutrino flavor transformation is adequate at late times but could be inadequate in early epochs of core-collapse supernovae, where the potentials that govern neutrino flavor evolution are affected by the scattered neutrinos. Taking account of this effect, and the way it couples to entropy and composition, will require a new approach in neutrino flavor transformation modeling.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1203.1607v1},
+author = {Cherry, John F. and Carlson, J. and Friedland, Alexander and Fuller, George M. and Vlasenko, Alexey},
+doi = {10.1103/PhysRevLett.108.261104},
+eprint = {arXiv:1203.1607v1},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Cherry et al/2012 - Physical Review Letters.pdf:pdf},
+issn = {00319007},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino},
+number = {June},
+pages = {1--5},
+title = {{Neutrino scattering and flavor transformation in supernovae}},
+volume = {108},
+year = {2012}
+}
+
+@article{Sarikas2012a,
+abstract = {Neutrinos streaming from a supernova (SN) core occasionally scatter in the envelope, producing a small "neutrino halo" with a much broader angle distribution than the primary flux originating directly from the core. Cherry et al. (2012) have recently pointed out that, during the accretion phase, the halo actually dominates neutrino-neutrino refraction at distances exceeding some 100 km. However, the multi-angle matter effect (which increases if the angle distribution is broader) still appears to suppress self-induced flavor conversion during the accretion phase.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1204.0971v1},
+author = {Sarikas, Srdjan and Tamborra, Irene and Raffelt, Georg and H{\"{u}}depohl, Lorenz and Janka, Hans Thomas},
+doi = {10.1103/PhysRevD.85.113007},
+eprint = {arXiv:1204.0971v1},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Sarikas et al/2012 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
+issn = {15507998},
+journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+mendeley-groups = {Neutrino/collective,Neutrino/halo},
+number = {11},
+pages = {1--5},
+title = {{Supernova neutrino halo and the suppression of self-induced flavor conversion}},
+volume = {85},
+year = {2012}
+}
+
+
+
+%%%%%%%%%%%%% Halo Problem %%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%
 
