--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -65,6 +65,7 @@
 \include{chapters/chapter2}
 \include{chapters/chapter3}
 \include{chapters/chapter4}
+\include{chapters/chapter5}
 \include{chapters/conclusion}
 \include{chapters/appendices}
 
