added bipolar model to appendix

--- a/references.bib
+++ b/references.bib
@@ -1306,6 +1306,29 @@ year = {2017}
 }
 
 
+@article{Samuel1996,
+abstract = {Analytical solutions are obtained to the nonlinear equations describing neutrino oscillations when explicit neutrino-antineutrino asymmetries are present. Such a system occurs in the early Universe if neutrinos have a non-zero chemical potential. Solutions to the equations lead to a new type of coherent behavior governed by two modes. These bimodal solutions provide new insights into dense neutrino gases and into neutrino oscillations in the early Universe, thereby allowing one to surmise the flavor behavior of neutrinos with a non-zero chemical potential.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/9604341},
+author = {Samuel, Stuart},
+doi = {10.1103/PhysRevD.53.5382},
+eprint = {9604341},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Samuel/1996 - Physical Review D.pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/selfinteraction,Neutrino},
+month = {may},
+number = {10},
+pages = {5382--5393},
+primaryClass = {hep-ph},
+title = {{Bimodal coherence in dense self-interacting neutrino gases}},
+url = {http://arxiv.org/abs/hep-ph/9604341 http://link.aps.org/doi/10.1103/PhysRevD.53.5382},
+volume = {53},
+year = {1996}
+}
+
+
+
 
 
 %%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%
