--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -24,18 +24,17 @@
 % \setlength{\parskip}{0.30cm}
 
 
-\title{An Awesome Thesis That Will Prove \\ to the Universe
-       That I Really Deserve This Honorable Degree}
+\title{Neutrino Flavor Oscillations \\ }
 
 \author{Lei Ma}
 
-\degreesubject{Ph.D., Physics}
+\degreesubject{Doctor of Philosoph in Physics}
 
-\degree{Ph.D. \\ Physics}
+\degree{Doctor of Philosophy \\ in Physics}
 
 \documenttype{Thesis}
 
-\previousdegrees{Bachelor of Science, Shandong University, 2010}
+\previousdegrees{}%Bachelor of Science, Shandong University, 2010}
 
 \date{April, \thisyear}
 
@@ -45,6 +44,7 @@
 %Copyright page is no longer necessary D. Murrell
 
 \include{chapters/dedication}
+\include{chapters/epigraph}
 \include{chapters/acknowledgments}
 
 \maketitleabstract %(required even though there's no abstract title anymore)
@@ -55,7 +55,7 @@
 \listoffigures
 \listoftables
 
-\include{chapters/glossary}
+
 
 
 \mainmatter
@@ -68,6 +68,7 @@
 \include{chapters/chapter5}
 \include{chapters/conclusion}
 \include{chapters/appendices}
+\include{chapters/glossary}
 
 
 % the back matter
