Updates from ShareLaTeX

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -24,11 +24,11 @@
 % \setlength{\parskip}{0.30cm}
 
 
-\title{Neutrino Flavor Oscillations \\ }
+\title{Neutrino Flavor Oscillations \\ in Media}
 
 \author{Lei Ma}
 
-\degreesubject{Doctor of Philosoph in Physics}
+\degreesubject{Doctor of Philosophy in Physics}
 
 \degree{Doctor of Philosophy \\ in Physics}
 
