--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -24,15 +24,20 @@
 % \setlength{\parskip}{0.30cm}
 
 
-\title{Neutrino Flavor Oscillations \\ in Media}
+\title{Neutrino Flavor Conversions in Dense Medium: Matter Stimulation, Dispersion Relation, and Neutrino Halo}
 
-\author{Lei Ma}
+\author{Lei Ma\\
+\vspace{3em}
+\\
+Supervisor: \\
+Huaiyu Duan}
 
 \degreesubject{Doctor of Philosophy in Physics}
 
+
 \degree{Doctor of Philosophy \\ in Physics}
 
-\documenttype{Thesis}
+\documenttype{Dissertation}
 
 \previousdegrees{}%Bachelor of Science, Shandong University, 2010}
 
