--- a/preambles.tex
+++ b/preambles.tex
@@ -66,6 +66,9 @@ sorting=ynt
 \usepackage{caption}
 \usepackage{subcaption}
 
+\usepackage{lineno}
+% \linenumbers
+
 \overfullrule=0pt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
