--- a/references.bib
+++ b/references.bib
@@ -28,7 +28,7 @@
 @misc{westworld2016,
   title =   {Westworld},
   author = {J.J. Abrams and Bryan Burk,Lisa Joy and Jonathan Nolan and Jerry Weintraub and Bruce Dunn and Susan Ekins and Kathy Lingg and Noreen O'Toole and Stephen Semel and Athena Wickham and David Auge and Richard J. Lewis and Cherylanne Martin and Roberto Patino and Kath Lingenfelter and Daniel T. Thomsen and Alan Poul and Ed Brubaker and Dominic Mitchell and Bridget Carpenter and Scott Stephens and David Coatsworth and Timothy Stormer and Carly Wray},
-  director = {Jonathan Nolan, Frederick E.O. Toye, Jonny Campbell, Richard J. Lewis, Michelle MacLaren, Neil Marshall, Vincenzo Natali, Stephen Williams, Lisa Joy, Craig Zobel}, 
+  director = {Jonathan Nolan, Frederick E.O. Toye, Jonny Campbell, Richard J. Lewis, Michelle MacLaren, Neil Marshall, Vincenzo Natali, Stephen Williams, Lisa Joy, Craig Zobel},
   journal={IMDb},
   year = {2016},
   publisher = {Bad Robot, Jerry Weintraub Productions, Kilter Films, Warner Bros. Television}
@@ -972,7 +972,7 @@ keywords = {black hole accretion disk,core-collapse supernova,dense neutrino med
 mendeley-groups = {Neutrino/collective},
 month = {jan},
 pages = {89--94},
-title = {{Physics of neutrino flavor transformation through matter–neutrino resonances}},
+title = {{Physics of neutrino flavor transformation through \hyphenation{matter neutrino} resonances}},
 url = {http://arxiv.org/abs/1509.08975 http://linkinghub.elsevier.com/retrieve/pii/S0370269315008758},
 volume = {752},
 year = {2016}
