--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -24,7 +24,7 @@
 % \setlength{\parskip}{0.30cm}
 
 
-\title{Neutrino Flavor Conversions in Dense Medium: Matter Stimulation, Dispersion Relation, and Neutrino Halo}
+\title{Neutrino Flavor Conversions in Dense Media}
 
 \author{Lei Ma\\
 \vspace{3em}
