update chapter introduction and chapter 2

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -27,10 +27,10 @@
 \title{Neutrino Flavor Conversions in Dense Media}
 
 \author{Lei Ma\\
-\vspace{3em}
-\\
+\vspace{4em}
+% \\
 Supervisor: \\
-Huaiyu Duan}
+Professor Huaiyu Duan}
 
 \degreesubject{Doctor of Philosophy in Physics}
 
