--- a/references.bib
+++ b/references.bib
@@ -481,6 +481,79 @@ year = {2006}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
 
+@article{Lande2003,
+title = "The homestake chlorine solar neutrino experiment—past, present and future",
+journal = "Nuclear Physics B - Proceedings Supplements",
+volume = "118",
+pages = "49 - 54",
+year = "2003",
+note = "Proceedings of the XXth International Conference on Neutrino Physics and Astrophysics",
+issn = "0920-5632",
+doi = "https://doi.org/10.1016/S0920-5632(03)01303-3",
+url = "http://www.sciencedirect.com/science/article/pii/S0920563203013033",
+author = "Kenneth Lande and Paul Wildenhain",
+abstract = "The Homestake chlorine solar neutrino detector has measured the total flux of electron neutrinos from the Sun above 0.814 MeV as 2.56±0.16(stat)±0.16(syst) SNU compared to the predicted flux of 7.5 SNU. When combined with the recent SNO measurement of the electron neutrino flux from 8B decays, the Homestake measurement gives 0.55 ± 0.27 SNU for the “1 MeV” electron neutrino flux (7 Be, PeP and CNO) compared to the prediction of 1.83 SNU, assuming no neutrino flavor transitions."
+}
+
+@ARTICLE{Cleveland1998,
+   author = {{Cleveland}, B.~T. and {Daily}, T. and {Davis}, Jr., R. and
+	{Distel}, J.~R. and {Lande}, K. and {Lee}, C.~K. and {Wildenhain}, P.~S. and
+	{Ullman}, J.},
+    title = "{Measurement of the Solar Electron Neutrino Flux with the Homestake Chlorine Detector}",
+  journal = {\apj},
+ keywords = {ELEMENTARY PARTICLES, SUN: INTERIOR, SUN: PARTICLE EMISSION, Elementary Particles, Sun: Interior, Sun: Particle Emission},
+     year = 1998,
+    month = mar,
+   volume = 496,
+    pages = {505-526},
+      doi = {10.1086/305343},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...496..505C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{McDonald2013,
+title = "SNO and future solar neutrino experiments",
+journal = "Nuclear Physics B - Proceedings Supplements",
+volume = "235-236",
+pages = "61 - 67",
+year = "2013",
+note = "The XXV International Conference on Neutrino Physics and Astrophysics",
+issn = "0920-5632",
+doi = "https://doi.org/10.1016/j.nuclphysbps.2013.03.012",
+url = "http://www.sciencedirect.com/science/article/pii/S0920563213001151",
+author = "A.B. McDonald",
+keywords = "Solar neutrinos, neutrino properties, solar models",
+abstract = "The SNO Collaboration has completed a combined analysis of 8B solar neutrino data from all three phases of the project. The combined analysis resulted in a total flux of active neutrino flavors from 8B decays in the sun of 5.25±0.16(stat.)−0.13+0.11(syst.)×106cm2s−1. A three-flavor neutrino oscillation analysis combining the SNO results with results of all other solar neutrino experiments and the KamLAND experiment yielded Δm212=(7.41−0.19+0.21)×10−5eV2, tan2θ12=0.446−0.029+0.030, and sin2θ13=(2.5−1.5+1.8)×10−2. The results of the SNO analysis will be presented, along with a discussion of future projects that will seek to study lower energy neutrinos to improve on our knowledge of the properties of neutrinos and the sun."
+}
+
+@book{Raffelt1996wa,
+      author         = "Raffelt, G. G.",
+      title          = "{Stars as laboratories for fundamental physics}",
+      year           = "1996",
+      url            = "http://wwwth.mpp.mpg.de/members/raffelt/mypapers/199613.pdf",
+      journal        = "Chicago, USA: Univ. Pr. (1996) 664 p",
+      ISBN           = "9780226702728",
+      SLACcitation   = "%%CITATION = INSPIRE-430034;%%"
+}
+
+@book{Janka2017,
+author="Janka, Hans-Thomas",
+editor="Alsabti, Athem W.
+and Murdin, Paul",
+title="Neutrino Emission from Supernovae",
+bookTitle="Handbook of Supernovae",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="1575--1604",
+abstract="Supernovae are the most powerful cosmic sources of MeV neutrinos. These elementary particles play a crucial role when the evolution of a massive star is terminated by the collapse of its core to a neutron star or a black hole and the star explodes as supernova. The release of electron neutrinos, which are abundantly produced by electron captures, accelerates the catastrophic infall and causes a gradual neutronization of the stellar plasma by converting protons to neutrons as dominant constituents of neutron star matter. The emission of neutrinos and antineutrinos of all flavors carries away the gravitational binding energy of the compact remnant and drives its evolution from the hot initial to the cold final state. The absorption of electron neutrinos and antineutrinos in the surroundings of the newly formed neutron star can power the supernova explosion and determines the conditions in the innermost supernova ejecta, making them an interesting site for the nucleosynthesis of iron-group elements and trans-iron nuclei.",
+isbn="978-3-319-21846-5",
+doi="10.1007/978-3-319-21846-5_4",
+url="https://doi.org/10.1007/978-3-319-21846-5_4"
+}
+
+
 
 @book{Boyd2008,
 author = {{R. W. Boyd}},
