stars as neutrino factories

--- a/references.bib
+++ b/references.bib
@@ -482,34 +482,35 @@ year = {2006}
 %%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
 
 @article{Lande2003,
-title = "The homestake chlorine solar neutrino experiment—past, present and future",
-journal = "Nuclear Physics B - Proceedings Supplements",
-volume = "118",
-pages = "49 - 54",
-year = "2003",
-note = "Proceedings of the XXth International Conference on Neutrino Physics and Astrophysics",
-issn = "0920-5632",
-doi = "https://doi.org/10.1016/S0920-5632(03)01303-3",
-url = "http://www.sciencedirect.com/science/article/pii/S0920563203013033",
-author = "Kenneth Lande and Paul Wildenhain",
-abstract = "The Homestake chlorine solar neutrino detector has measured the total flux of electron neutrinos from the Sun above 0.814 MeV as 2.56±0.16(stat)±0.16(syst) SNU compared to the predicted flux of 7.5 SNU. When combined with the recent SNO measurement of the electron neutrino flux from 8B decays, the Homestake measurement gives 0.55 ± 0.27 SNU for the “1 MeV” electron neutrino flux (7 Be, PeP and CNO) compared to the prediction of 1.83 SNU, assuming no neutrino flavor transitions."
+      author         = "Lande, K. and Wildenhain, P.",
+      title          = "{The Homestake chlorine solar neutrino experiment: Past,
+                        present and future}",
+      booktitle      = "{Neutrino physics and astrophysics. Proceedings, 20th
+                        International Conference, Neutrino 2002, Munich, Germany,
+                        May 25-30, 2002}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "118",
+      year           = "2003",
+      pages          = "49-54",
+      doi            = "10.1016/S0920-5632(03)01303-3",
+      note           = "[,49(2003)]",
+      SLACcitation   = "%%CITATION = NUPHZ,118,49;%%"
 }
 
-@ARTICLE{Cleveland1998,
-   author = {{Cleveland}, B.~T. and {Daily}, T. and {Davis}, Jr., R. and
-	{Distel}, J.~R. and {Lande}, K. and {Lee}, C.~K. and {Wildenhain}, P.~S. and
-	{Ullman}, J.},
-    title = "{Measurement of the Solar Electron Neutrino Flux with the Homestake Chlorine Detector}",
-  journal = {\apj},
- keywords = {ELEMENTARY PARTICLES, SUN: INTERIOR, SUN: PARTICLE EMISSION, Elementary Particles, Sun: Interior, Sun: Particle Emission},
-     year = 1998,
-    month = mar,
-   volume = 496,
-    pages = {505-526},
-      doi = {10.1086/305343},
-   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...496..505C},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Cleveland1998,
+      author         = "Cleveland, B. T. and Daily, Timothy and Davis, Jr.,
+                        Raymond and Distel, James R. and Lande, Kenneth and Lee,
+                        C. K. and Wildenhain, Paul S. and Ullman, Jack",
+      title          = "{Measurement of the solar electron neutrino flux with the
+                        Homestake chlorine detector}",
+      journal        = "Astrophys. J.",
+      volume         = "496",
+      year           = "1998",
+      pages          = "505-526",
+      doi            = "10.1086/305343",
+      SLACcitation   = "%%CITATION = ASJOA,496,505;%%"
 }
+
 
 
 @article{McDonald2013,
@@ -539,8 +540,7 @@ abstract = "The SNO Collaboration has completed a combined analysis of 8B solar 
 
 @book{Janka2017,
 author="Janka, Hans-Thomas",
-editor="Alsabti, Athem W.
-and Murdin, Paul",
+editor="Alsabti, Athem W. and Murdin, Paul",
 title="Neutrino Emission from Supernovae",
 bookTitle="Handbook of Supernovae",
 year="2017",
@@ -871,6 +871,26 @@ url = {http://stacks.iop.org/0004-637X/799/i=1/a=5?key=crossref.5b5fcec309f37aef
 volume = {799},
 year = {2015}
 }
+
+@article{Borriello2014,
+abstract = {During the shock-wave propagation in a core-collapse supernova (SN), matter turbulence may affect neutrino flavor conversion probabilities. Such effects have been usually studied by adding small-scale random fluctuations (with arbitrary amplitude) on top of coarse, spherically symmetric matter density profiles. Recently, however, two-dimensional (2D) SN models have reached a space resolution high enough to directly trace anisotropic density profiles, down to scales smaller than the typical neutrino oscillation length. In this context, we analyze the statistical properties of a large set of SN matter density profiles obtained in a high-resolution 2D simulation, focusing on a post-bounce time (2 s) suited to study shock-wave effects on neutrino propagation on scales as small as 15 km. We clearly find the imprint of a broken (Kolmogorov-Kraichnan) power-law structure, as generically expected in 2D turbulence spectra. We then compute the flavor evolution of SN neutrinos along representative realizations of the turbulent matter density profiles, and observe no significant damping of the neutrino crossing probabilities on their way through the shock wave, contrary to previous findings in the literature. We surmise that the lack of damping is likely to apply also to 3D conditions to be studied by future 3D simulations with comparable resolution. These results show the importance of anchoring turbulence effects on SN neutrinos to realistic, fine-grained SN models.},
+archivePrefix = {arXiv},
+arxivId = {1310.7488},
+author = {Borriello, Enrico and Chakraborty, Sovan and Janka, Hans-Thomas and Lisi, Eligio and Mirizzi, Alessandro},
+doi = {10.1088/1475-7516/2014/11/030},
+eprint = {1310.7488},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Borriello et al/2014 - Journal of Cosmology and Astroparticle Physics.pdf:pdf;:Users/leima/OneDrive - University of New Mexico/Mendeley/Borriello et al/2014 - Journal of Cosmology and Astroparticle Physics.pdf:pdf},
+issn = {1475-7516},
+journal = {Journal of Cosmology and Astroparticle Physics},
+mendeley-groups = {Neutrino/astro},
+number = {11},
+pages = {030--030},
+title = {{Turbulence patterns and neutrino flavor transitions in high-resolution supernova models}},
+url = {http://stacks.iop.org/1475-7516/2014/i=11/a=030?key=crossref.fb1c09ef84ed89b75cb889e093d88c06},
+volume = {2014},
+year = {2014}
+}
+
 
 
 @unpublished{Friedland2006,
