--- a/preambles.tex
+++ b/preambles.tex
@@ -89,6 +89,8 @@ sorting=ynt
 
 
 \newcommand{\ii}{\mathrm i}
+\newcommand{\vv}{\mathrm v}
+\newcommand{\ff}{\mathrm f}
 
 
 %%%%%%  PREAMBLES %%%%%%%%%
