--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -69,8 +69,8 @@ Professor Huaiyu Duan}
 \include{chapters/introduction}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
-\include{chapters/chapter4}
-\include{chapters/chapter5}
+% \include{chapters/chapter4}
+% \include{chapters/chapter5}
 \include{chapters/conclusion}
 \include{chapters/appendices}
 \include{chapters/glossary}
@@ -79,15 +79,17 @@ Professor Huaiyu Duan}
 % the back matter
 % \backmatter
 
+% \bibliographystyle{AMS}
+\addcontentsline{toc}{chapter}{References}
 \printbibliography
 
-%\clearpage
-%\bibliography{references}
-%\addcontentsline{toc}{chapter}{References}
-%\bibliographystyle{apalike2}
+% \clearpage
+% \bibliography{references}
+% \addcontentsline{toc}{chapter}{References}
+% \bibliographystyle{apalike2}
 
 
-%\bibliographystyle{AMS}
+% \bibliographystyle{AMS}
 %\bibliography{bibfile_name}
 
 \end{document}
