--- a/references.bib
+++ b/references.bib
@@ -201,6 +201,23 @@ year = {1968}
 }
 
 
+@article{Bethe1985,
+author = {Bethe, Hans A. and Brown, Gerald},
+doi = {10.1038/scientificamerican0585-60},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bethe, Brown/1985 - Scientific American.pdf:pdf},
+issn = {0036-8733},
+journal = {Scientific American},
+mendeley-groups = {Astrophysics/supernova,Neutrino/astro},
+month = {may},
+number = {5},
+pages = {60--68},
+title = {{How a Supernova Explodes}},
+url = {http://www.nature.com/doifinder/10.1038/scientificamerican0585-60},
+volume = {252},
+year = {1985}
+}
+
+
 
 %%%%%%% Introduction %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
