--- a/preambles.tex
+++ b/preambles.tex
@@ -15,6 +15,8 @@ sorting=ynt
   }
 }
 
+% \addcontentsline{toc}{chapter}{References}
+% \bibliographystyle{apalike2}
 % \bibliographystyle{abbrv}
 \addbibresource{references.bib}
 
@@ -69,6 +71,8 @@ sorting=ynt
 \usepackage{lineno}
 % \linenumbers
 
+\usepackage{hyperref}
+
 \overfullrule=0pt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -91,6 +95,7 @@ sorting=ynt
 \newcommand{\ii}{\mathrm i}
 \newcommand{\vv}{\mathrm v}
 \newcommand{\ff}{\mathrm f}
+\newcommand{\mm}{\mathrm m}
 
 
 %%%%%%  PREAMBLES %%%%%%%%%
