--- a/preambles.tex
+++ b/preambles.tex
@@ -96,6 +96,8 @@ sorting=ynt
 \newcommand{\vv}{\mathrm v}
 \newcommand{\ff}{\mathrm f}
 \newcommand{\mm}{\mathrm m}
+\newcommand{\ee}{\mathrm e}
+\newcommand{\xx}{\mathrm x}
 
 
 %%%%%%  PREAMBLES %%%%%%%%%
