revised chap1 and 2

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -43,22 +43,22 @@ Professor Huaiyu Duan}
 
 \date{April, \thisyear}
 
-\maketitle
+% \maketitle
 
 %\makecopyright
 %Copyright page is no longer necessary D. Murrell
 
-\include{chapters/dedication}
-\include{chapters/epigraph}
-\include{chapters/acknowledgments}
+% \include{chapters/dedication}
+% \include{chapters/epigraph}
+% \include{chapters/acknowledgments}
 
-\maketitleabstract %(required even though there's no abstract title anymore)
-
+% \maketitleabstract %(required even though there's no abstract title anymore)
+%
 \include{chapters/abstract}
 
-\tableofcontents
-\listoffigures
-\listoftables
+% \tableofcontents
+% \listoffigures
+% \listoftables
 
 
 
@@ -68,12 +68,12 @@ Professor Huaiyu Duan}
 % \setcounter{chapter}{-1}  % start chapter numbering at 0
 \include{chapters/introduction}
 \include{chapters/chapter2}
-\include{chapters/chapter3}
+% \include{chapters/chapter3}
 % \include{chapters/chapter4}
 % \include{chapters/chapter5}
-\include{chapters/conclusion}
-\include{chapters/appendices}
-\include{chapters/glossary}
+% \include{chapters/conclusion}
+% \include{chapters/appendices}
+% \include{chapters/glossary}
 
 
 % the back matter
