--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -68,7 +68,7 @@ Professor Huaiyu Duan}
 % \setcounter{chapter}{-1}  % start chapter numbering at 0
 \include{chapters/introduction}
 \include{chapters/chapter2}
-% \include{chapters/chapter3}
+\include{chapters/chapter3}
 % \include{chapters/chapter4}
 % \include{chapters/chapter5}
 % \include{chapters/conclusion}
