moved rabi oscillations to main text

--- a/preambles.tex
+++ b/preambles.tex
@@ -99,6 +99,8 @@ sorting=ynt
 \newcommand{\mm}{\mathrm m}
 \newcommand{\ee}{\mathrm e}
 \newcommand{\xx}{\mathrm x}
+\newcommand{\RR}{\mathrm R}
+\newcommand{\dd}{\mathrm d}
 
 
 %%%%%%  PREAMBLES %%%%%%%%%
